Fixing output of apiversion-insert
