# source/interface/Madot.Interface.WebAPI/Madot-a-docs/openapi.json
@@ -314,7 +314,14 @@
         },
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StringIdCreated"
+                }
+              }
+            }
           },
           "409": {
             "description": "Conflict"
